// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation renders 1`] = `
<SideNavigation
  verticalSpacing={3}
>
  <div
    className="container"
  >
    <nav
      className="verticalPadding-3 topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <Link
            active={false}
            href="#one"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#one"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          One
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".2"
        >
          <Link
            active={false}
            href="#two"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#two"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Two
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".3"
        >
          <SubMenu
            active={true}
            id="Three"
            isOpen={false}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="active"
                onClick={[Function]}
              >
                <Box
                  inline={false}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__verticalPadding-3___Fsv37"
                  >
                    <FlexGrid
                      gutter={false}
                      limitWidth={false}
                    >
                      <Broadcast
                        channel="flex-grid"
                        compareValues={[Function]}
                        value={false}
                      >
                        <Grid
                          className="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi"
                          fluid={true}
                        >
                          <div
                            className="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
                          >
                            <Row$$1
                              horizontalAlign="start"
                            >
                              <Row
                                className="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr"
                                start="xs"
                              >
                                <div
                                  className="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2 TDS_flexboxgrid2__start-xs___2UxF8"
                                >
                                  <Col$$1
                                    xs={9}
                                  >
                                    <Subscriber
                                      channel="flex-grid"
                                      quiet={false}
                                    >
                                      <Col
                                        className="TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        xs={9}
                                      >
                                        <div
                                          className="TDS_flexboxgrid2__col-xs-9___3Fqv9 TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        >
                                          <Box
                                            dangerouslyAddClassName="label"
                                            horizontal={2}
                                            inline={false}
                                            tag="div"
                                          >
                                            <div
                                              className="TDS_Box-modules__horizontalPadding-2___3hmwJ label"
                                            >
                                              <ColoredTextProvider>
                                                <div>
                                                  <Text
                                                    block={false}
                                                    bold={true}
                                                    invert={false}
                                                    size="medium"
                                                  >
                                                    <span
                                                      className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__inheritColor___3YAyL"
                                                    >
                                                      Threefdsfdsfds
                                                    </span>
                                                  </Text>
                                                </div>
                                              </ColoredTextProvider>
                                            </div>
                                          </Box>
                                        </div>
                                      </Col>
                                    </Subscriber>
                                  </Col$$1>
                                  <Col$$1>
                                    <Subscriber
                                      channel="flex-grid"
                                      quiet={false}
                                    >
                                      <Col
                                        className="TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        xs={true}
                                      >
                                        <div
                                          className="TDS_flexboxgrid2__col-xs___2KrHO TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        >
                                          <Box
                                            dangerouslyAddClassName="floatIcon"
                                            inline={false}
                                            tag="div"
                                          >
                                            <div
                                              className="floatIcon"
                                            >
                                              <DecorativeIcon
                                                size={16}
                                                symbol="caretDown"
                                                variant="secondary"
                                              >
                                                <Icon
                                                  aria-hidden="true"
                                                  size={16}
                                                  symbol="caretDown"
                                                  variant="secondary"
                                                >
                                                  <i
                                                    aria-hidden="true"
                                                    className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                                                  />
                                                </Icon>
                                              </DecorativeIcon>
                                            </div>
                                          </Box>
                                        </div>
                                      </Col>
                                    </Subscriber>
                                  </Col$$1>
                                </div>
                              </Row>
                            </Row$$1>
                          </div>
                        </Grid>
                      </Broadcast>
                    </FlexGrid>
                  </div>
                </Box>
              </button>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;

exports[`SideNavigation renders without vertical spacing 1`] = `
<SideNavigation>
  <div
    className="container"
  >
    <nav
      className="topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <SubMenu
            active={true}
            id="Three"
            isOpen={false}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="active"
                onClick={[Function]}
              >
                <Box
                  inline={false}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__verticalPadding-3___Fsv37"
                  >
                    <FlexGrid
                      gutter={false}
                      limitWidth={false}
                    >
                      <Broadcast
                        channel="flex-grid"
                        compareValues={[Function]}
                        value={false}
                      >
                        <Grid
                          className="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi"
                          fluid={true}
                        >
                          <div
                            className="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
                          >
                            <Row$$1
                              horizontalAlign="start"
                            >
                              <Row
                                className="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr"
                                start="xs"
                              >
                                <div
                                  className="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2 TDS_flexboxgrid2__start-xs___2UxF8"
                                >
                                  <Col$$1
                                    xs={9}
                                  >
                                    <Subscriber
                                      channel="flex-grid"
                                      quiet={false}
                                    >
                                      <Col
                                        className="TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        xs={9}
                                      >
                                        <div
                                          className="TDS_flexboxgrid2__col-xs-9___3Fqv9 TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        >
                                          <Box
                                            dangerouslyAddClassName="label"
                                            horizontal={2}
                                            inline={false}
                                            tag="div"
                                          >
                                            <div
                                              className="TDS_Box-modules__horizontalPadding-2___3hmwJ label"
                                            >
                                              <ColoredTextProvider>
                                                <div>
                                                  <Text
                                                    block={false}
                                                    bold={true}
                                                    invert={false}
                                                    size="medium"
                                                  >
                                                    <span
                                                      className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__inheritColor___3YAyL"
                                                    >
                                                      Threefdsfdsfds
                                                    </span>
                                                  </Text>
                                                </div>
                                              </ColoredTextProvider>
                                            </div>
                                          </Box>
                                        </div>
                                      </Col>
                                    </Subscriber>
                                  </Col$$1>
                                  <Col$$1>
                                    <Subscriber
                                      channel="flex-grid"
                                      quiet={false}
                                    >
                                      <Col
                                        className="TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        xs={true}
                                      >
                                        <div
                                          className="TDS_flexboxgrid2__col-xs___2KrHO TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
                                        >
                                          <Box
                                            dangerouslyAddClassName="floatIcon"
                                            inline={false}
                                            tag="div"
                                          >
                                            <div
                                              className="floatIcon"
                                            >
                                              <DecorativeIcon
                                                size={16}
                                                symbol="caretDown"
                                                variant="secondary"
                                              >
                                                <Icon
                                                  aria-hidden="true"
                                                  size={16}
                                                  symbol="caretDown"
                                                  variant="secondary"
                                                >
                                                  <i
                                                    aria-hidden="true"
                                                    className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                                                  />
                                                </Icon>
                                              </DecorativeIcon>
                                            </div>
                                          </Box>
                                        </div>
                                      </Col>
                                    </Subscriber>
                                  </Col$$1>
                                </div>
                              </Row>
                            </Row$$1>
                          </div>
                        </Grid>
                      </Broadcast>
                    </FlexGrid>
                  </div>
                </Box>
              </button>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;
